--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -85,7 +85,7 @@ jobs:
           total_packages=0
           
           # Get all artifacts from the current run
-          artifacts=$(gh api repos/${{ github.repository }}/actions/runs/${{ github.input.runs_id }}/artifacts --jq '.artifacts[].name' | grep '^packages_' || true)
+          artifacts=$(gh api repos/${{ github.repository }}/actions/runs/${{ github.event.inputs.runs_id }}/artifacts --jq '.artifacts[].name' | grep '^packages_' || true)
           
           if [[ -z "$artifacts" ]]; then
             echo "::warning::No package artifacts found"
