--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,8 +35,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: releases
-          fetch-depth: 1
+          fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
+          lfs: true
 
       - name: 🔧 Setup release environment
         run: |
