--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,7 @@ jobs:
           ref: releases
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
-          lfs: true
+          lfs: false
 
       - name: 🔧 Setup release environment
         run: |
@@ -53,25 +53,25 @@ jobs:
           git config pack.compression 9
           git config lfs.concurrenttransfers 8
 
-      - name: 📋 Setup LFS tracking
-        run: |
-          cat > .gitattributes <<'EOF'
-          # Package files
-          *.ipk filter=lfs diff=lfs merge=lfs -text
-          *.apk filter=lfs diff=lfs merge=lfs -text
-          *.tar.* filter=lfs diff=lfs merge=lfs -text
-          *.gz filter=lfs diff=lfs merge=lfs -text
+      # - name: 📋 Setup LFS tracking
+      #   run: |
+      #     cat > .gitattributes <<'EOF'
+      #     # Package files
+      #     *.ipk filter=lfs diff=lfs merge=lfs -text
+      #     *.apk filter=lfs diff=lfs merge=lfs -text
+      #     *.tar.* filter=lfs diff=lfs merge=lfs -text
+      #     *.gz filter=lfs diff=lfs merge=lfs -text
           
-          # Generated content
-          packages/** linguist-generated=true
-          releases/** linguist-generated=true
+      #     # Generated content
+      #     packages/** linguist-generated=true
+      #     releases/** linguist-generated=true
           
-          # Documentation
-          *.md text eol=lf
-          *.json text eol=lf
-          EOF
+      #     # Documentation
+      #     *.md text eol=lf
+      #     *.json text eol=lf
+      #     EOF
           
-          git add .gitattributes
+      #     git add .gitattributes
 
       - name: 📦 Download and process artifacts
         id: download
